chore: rewrite the opening message

--- a/static/index.html
+++ b/static/index.html
@@ -834,13 +834,11 @@
         }
 
         // Albanian WhatsApp message template
-        const message = `Përshëndetje ${businessName}, urime për biznesin e ri! 🎉
+        const message = `Pershendetje ${businessName}, urime per biznesin e ri!
 
-Ne ofrojmë një aplikacion të plotë menaxhimi biznesi që ju ndihmon të organizoni faturat, produktet, klientët dhe inventarin — gjithçka në një vend, në mënyrë të thjeshtë dhe efikase.
+Ne ofrojme nje aplikacion menaxhimi biznesi qe ju ndihmon te organizoni faturat, produktet, klientet, inventarin, etj — gjithçka ne nje vend, ne menyre te thjeshte dhe efikase.
 
-Dëshironi një demonstrim falas për ta provuar? Pa asnjë obligim!
-
-Përgjigjuni me "PO" dhe do t'ju dërgoj më shumë detaje.`;
+Deshironi nje demonstrim falas per ta provuar? Programi eshte falas.`;
 
         // Encode the message for URL
         const encodedMessage = encodeURIComponent(message);
