--- a/static/index.html
+++ b/static/index.html
@@ -837,7 +837,7 @@
 
 Ne ofrojme nje aplikacion menaxhimi biznesi qe ju ndihmon te organizoni faturat, produktet, klientet, inventarin, etj — gjithçka ne nje vend, ne menyre te thjeshte dhe efikase.
 
-Deshironi nje demonstrim falas per ta provuar? Programi eshte falas.`;
+Deshironi nje demonstrim per ta provuar? Programi eshte falas.`;
 
         // Encode the message for URL
         const encodedMessage = encodeURIComponent(message);
